Tue Aug 21 06:35:45 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/libhid.c, drivers/usbhid-ups.c:
   - Moved the 'cast' from an Input report to a Feature report to
     usbhid-ups.c.

Mon Aug 20 19:58:42 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/mge-hid.c:
   - Added HU_FLAG_SEMI_STATIC for several user changeable variables
     where applicable.

Mon Aug 20 19:44:04 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/libhid.[ch]:
   - We cache the pointer to the Feature report that corresponds with
     a NUT variable, but what we receive on the interrupt pipeline is
     an Input report (apple != pear). So find_hid_info() would never
     find a match, since it only looks to the Feature reports. Need
     to find a better way to do this, but it works for now.
   - Added HIDDataType() helper function, to display the report type.
 * drivers/usbhid-ups.c:
   - Added some debugging lines, so that we know where we are.

Mon Aug 20 14:12:47 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/libhid.c:
   - Return from the HIDDumpTree() immediately, if nut_debug_level
     is too low. Otherwise, even if nothing will be printed, it
     will proceed to query everything from the report descriptor.
     This will take a long time on my Evolution 650, since the
     queries for 'UPS.COPIBridge' timeout, without ever yielding
     something useful.

Mon Aug 20 12:35:24 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 This update is based on input from Bernd Markgraf.

 * drivers/ietfmib.h:
   - Added 'test.battery.start.quick' and 'test.battery.start.deep'
     instcmd.
 * drivers/pwmib.h:
   - Added 'shutdown.stop', 'load.on' and 'load.off' instcmd.
   - Use PW_OID_BATT_STATUS, PW_OID_ALARM_OB and PW_OID_ALARM_LB
     instead of IETF_OID_BATT_STATUS.

Mon Aug 20 11:32:42 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/libhid.[ch], drivers/usbhid-ups.c: